--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
             by <%= @article.user.username if @article.user %>
             <%= link_to gravatar_for(@article.user), @article.user%>
             <% if @article.categories.any? %>
-              <div class="mt-2 mr-1">
+              <div class="mt-2">
                 <%= render @article.categories %>
               </div>
             <% end %>
