--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,23 @@
 <div class="container">
   <h1 class="text-center mt-4">Category: <%= @category.name %></h1>
 </div>
+<div class="text-center mt-4">
+  <% if logged_in? && current_user.admin? %> 
+    <%= link_to "Edit Category", edit_category_path(@category), class: "btn btn-outline-info"%> 
+    <!-- 
+    <%= link_to "Delete category", category_path(@category), class:"btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure you want to delete the category?"} %>
+    -->
+  <% end %>
+</div>
+
+<h3 class="text-center mt-4">Articles</h3>
+
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
+<%= render 'articles/article'%>
+
+<div class="flickr_pagination mt-4 mb-4">
+  <%= will_paginate @articles, :container => false %>
+</div>
